fix: prevent dropdown from clipping on mobile viewport

--- a/src/components/FontDropdownSelector/FontDropdownSelector.module.css
+++ b/src/components/FontDropdownSelector/FontDropdownSelector.module.css
@@ -21,7 +21,6 @@
     z-index: 2;
     position: absolute;
     top: 45px;
-    right: 135px;
     min-width: 11.4em;
 
 
